--- a/platform/OSP/OSP_vs120.vcxproj.filters
+++ b/platform/OSP/OSP_vs120.vcxproj.filters
@@ -2,76 +2,76 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Core">
-      <UniqueIdentifier>{110bbbef-d955-4d96-9757-d2803c8b10cd}</UniqueIdentifier>
+      <UniqueIdentifier>{19829c15-1dd6-4b1e-b617-e309bd6822a5}</UniqueIdentifier>
     </Filter>
     <Filter Include="Core\Header Files">
-      <UniqueIdentifier>{055a2695-c7bc-40c5-9900-f79c66173857}</UniqueIdentifier>
+      <UniqueIdentifier>{f79053e5-6af5-47fc-a999-52e0942bd1a7}</UniqueIdentifier>
     </Filter>
     <Filter Include="Core\Source Files">
-      <UniqueIdentifier>{c65d2979-da1b-44c6-83fc-13396f52ead5}</UniqueIdentifier>
+      <UniqueIdentifier>{c592c7b7-5b3b-4012-aca3-d1f221a5cf54}</UniqueIdentifier>
     </Filter>
     <Filter Include="Util">
-      <UniqueIdentifier>{32cab2ad-ec0d-45bf-8eed-8a4b8029972b}</UniqueIdentifier>
+      <UniqueIdentifier>{798e41f5-2351-42e9-9c66-52cd77f416d4}</UniqueIdentifier>
     </Filter>
     <Filter Include="Util\Header Files">
-      <UniqueIdentifier>{221c13cb-7bfc-4f10-bdfd-45e16eac9877}</UniqueIdentifier>
+      <UniqueIdentifier>{9b477435-e83c-48cd-8e74-66f3d54e6a49}</UniqueIdentifier>
     </Filter>
     <Filter Include="Util\Source Files">
-      <UniqueIdentifier>{20c9b586-d133-4bff-8a1b-3b4fef3567b1}</UniqueIdentifier>
+      <UniqueIdentifier>{dba7a7e6-85ba-4df6-9fe2-c6c648cfddc5}</UniqueIdentifier>
     </Filter>
     <Filter Include="Bundle">
-      <UniqueIdentifier>{5829741d-60e0-4e4e-8472-97e6e035509a}</UniqueIdentifier>
+      <UniqueIdentifier>{184c9977-4f79-4474-9539-19cf91145243}</UniqueIdentifier>
     </Filter>
     <Filter Include="Bundle\Header Files">
-      <UniqueIdentifier>{2accd0dd-b407-4a9e-aa20-778fcd16974b}</UniqueIdentifier>
+      <UniqueIdentifier>{57f16db4-18f9-4b9d-a4ef-a76bbcfbba5a}</UniqueIdentifier>
     </Filter>
     <Filter Include="Bundle\Source Files">
-      <UniqueIdentifier>{00aff9dd-8769-447c-9848-c8dce9215c06}</UniqueIdentifier>
+      <UniqueIdentifier>{1e1ff4bb-f89d-4b70-b8a7-e4972b293e62}</UniqueIdentifier>
     </Filter>
     <Filter Include="Service">
-      <UniqueIdentifier>{20a770fb-b5a3-493b-a8f2-a742f674b1ae}</UniqueIdentifier>
+      <UniqueIdentifier>{0d2ebf07-ea20-4a3e-b816-ad306fba7727}</UniqueIdentifier>
     </Filter>
     <Filter Include="Service\Header Files">
-      <UniqueIdentifier>{0eb0d007-c93f-480e-a606-e14f6393fab7}</UniqueIdentifier>
+      <UniqueIdentifier>{66019900-d0ff-412b-9006-edbcc729d669}</UniqueIdentifier>
     </Filter>
     <Filter Include="Service\Source Files">
-      <UniqueIdentifier>{0eea7f34-64cf-4b9f-b4ea-b20b7008dd2b}</UniqueIdentifier>
+      <UniqueIdentifier>{05993842-3fac-471f-b003-615b9c4f3516}</UniqueIdentifier>
     </Filter>
     <Filter Include="ExtensionPointService">
-      <UniqueIdentifier>{2fc262bf-2df3-4c1f-9ebd-3374d2c1aa84}</UniqueIdentifier>
+      <UniqueIdentifier>{c09d2f6d-8c7f-45ad-af22-7ff127ec29c9}</UniqueIdentifier>
     </Filter>
     <Filter Include="ExtensionPointService\Header Files">
-      <UniqueIdentifier>{fcf98b80-a79f-43fd-afd2-26dc9d244d42}</UniqueIdentifier>
+      <UniqueIdentifier>{b39306bb-8e08-490b-a061-74dd8ee60605}</UniqueIdentifier>
     </Filter>
     <Filter Include="ExtensionPointService\Source Files">
-      <UniqueIdentifier>{bdd1cfb9-ca4e-428f-8db0-998c1e78399e}</UniqueIdentifier>
+      <UniqueIdentifier>{c3882bb5-dddc-4af0-9aa2-7636b7e72a16}</UniqueIdentifier>
     </Filter>
     <Filter Include="PreferencesService">
-      <UniqueIdentifier>{7ba331ce-a4e8-42a3-b6f0-b72dc630f730}</UniqueIdentifier>
+      <UniqueIdentifier>{bddf91a8-a20a-4251-9133-898a275e7ca7}</UniqueIdentifier>
     </Filter>
     <Filter Include="PreferencesService\Header Files">
-      <UniqueIdentifier>{7a24633a-6bc2-46c8-9ebe-654f67691e7e}</UniqueIdentifier>
+      <UniqueIdentifier>{08785d0f-7a87-4b2a-ab32-1aaa9695896b}</UniqueIdentifier>
     </Filter>
     <Filter Include="PreferencesService\Source Files">
-      <UniqueIdentifier>{e375fdcf-7f60-4bde-b1b4-1792cac3a90b}</UniqueIdentifier>
+      <UniqueIdentifier>{632bca65-7ca9-4175-b8b9-1dc97cbca0f1}</UniqueIdentifier>
     </Filter>
     <Filter Include="BundleInstallerService">
-      <UniqueIdentifier>{2cf54f52-f8df-4b90-a600-cef1c2de741c}</UniqueIdentifier>
+      <UniqueIdentifier>{65273fec-1e14-4636-a468-7b62a32d3ac4}</UniqueIdentifier>
     </Filter>
     <Filter Include="BundleInstallerService\Header Files">
-      <UniqueIdentifier>{67e0a2b7-4518-422a-87c7-0566da36fea8}</UniqueIdentifier>
+      <UniqueIdentifier>{c98be7b6-a34c-498b-826f-61aae3e49823}</UniqueIdentifier>
     </Filter>
     <Filter Include="BundleInstallerService\Source Files">
-      <UniqueIdentifier>{10cd2941-54de-4e91-9b5e-06aafcfe1862}</UniqueIdentifier>
+      <UniqueIdentifier>{3c632c66-505e-4590-9e88-622ac90aa6e2}</UniqueIdentifier>
     </Filter>
     <Filter Include="AuthService">
-      <UniqueIdentifier>{eea5843b-164c-450a-8f92-452cb861a0ac}</UniqueIdentifier>
+      <UniqueIdentifier>{0428d559-e5e4-4e63-9edc-e8b8be6350af}</UniqueIdentifier>
     </Filter>
     <Filter Include="AuthService\Header Files">
-      <UniqueIdentifier>{004b6837-8a89-46ce-b72c-ad627ad68b27}</UniqueIdentifier>
+      <UniqueIdentifier>{ff0adead-1cd6-4ef3-b686-59cd54fb9298}</UniqueIdentifier>
     </Filter>
     <Filter Include="AuthService\Source Files">
-      <UniqueIdentifier>{52be9758-d0d1-4218-8120-dc68bf3b102c}</UniqueIdentifier>
+      <UniqueIdentifier>{e6407475-4960-43ea-8941-65d735b34c8c}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -139,6 +139,9 @@
       <Filter>Bundle\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\Poco\OSP\BundleFile.h">
+      <Filter>Bundle\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Poco\OSP\BundleFilter.h">
       <Filter>Bundle\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\Poco\OSP\BundleLoader.h">
@@ -261,6 +264,9 @@
       <Filter>Bundle\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\BundleFile.cpp">
+      <Filter>Bundle\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\BundleFilter.cpp">
       <Filter>Bundle\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\BundleLoader.cpp">
