--- a/platform/OSP/OSP_vs71.vcproj
+++ b/platform/OSP/OSP_vs71.vcproj
@@ -237,6 +237,8 @@
 				<File
 					RelativePath=".\include\Poco\OSP\BundleFile.h"/>
 				<File
+					RelativePath=".\include\Poco\OSP\BundleFilter.h"/>
+				<File
 					RelativePath=".\include\Poco\OSP\BundleLoader.h"/>
 				<File
 					RelativePath=".\include\Poco\OSP\BundleManifest.h"/>
@@ -267,6 +269,8 @@
 					RelativePath=".\src\BundleFactory.cpp"/>
 				<File
 					RelativePath=".\src\BundleFile.cpp"/>
+				<File
+					RelativePath=".\src\BundleFilter.cpp"/>
 				<File
 					RelativePath=".\src\BundleLoader.cpp"/>
 				<File
