--- a/platform/OSP/OSP_x64_vs110.vcxproj.filters
+++ b/platform/OSP/OSP_x64_vs110.vcxproj.filters
@@ -2,76 +2,76 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Core">
-      <UniqueIdentifier>{b71bd627-8578-403d-8263-468f6eff7e88}</UniqueIdentifier>
+      <UniqueIdentifier>{b885b146-bfdc-4dc7-a2b6-f5da00e98d07}</UniqueIdentifier>
     </Filter>
     <Filter Include="Core\Header Files">
-      <UniqueIdentifier>{a1cbbe5d-ba3a-47e2-9340-42b367e01e8b}</UniqueIdentifier>
+      <UniqueIdentifier>{106afd8a-d7e9-4f3c-8fa0-409d98648ee3}</UniqueIdentifier>
     </Filter>
     <Filter Include="Core\Source Files">
-      <UniqueIdentifier>{d78ae603-5885-4513-a9dc-969bec3302c3}</UniqueIdentifier>
+      <UniqueIdentifier>{a0370d09-eabc-4b0c-88f4-1cd7283b809d}</UniqueIdentifier>
     </Filter>
     <Filter Include="Util">
-      <UniqueIdentifier>{d355c70b-3732-4c17-8a59-cf2e5f248f0f}</UniqueIdentifier>
+      <UniqueIdentifier>{25a9004a-9c82-49ac-a372-56b28480ed9c}</UniqueIdentifier>
     </Filter>
     <Filter Include="Util\Header Files">
-      <UniqueIdentifier>{85525429-2a21-409f-b4a3-fb43113162b2}</UniqueIdentifier>
+      <UniqueIdentifier>{3c09ca3c-ef5b-4126-ade4-6dd1d8afe198}</UniqueIdentifier>
     </Filter>
     <Filter Include="Util\Source Files">
-      <UniqueIdentifier>{8d35658c-4a7b-40b8-b37f-0b2b583a6635}</UniqueIdentifier>
+      <UniqueIdentifier>{26e6eecd-79ac-4c7f-b8d0-7bcc79356ff6}</UniqueIdentifier>
     </Filter>
     <Filter Include="Bundle">
-      <UniqueIdentifier>{b410404c-3a88-4c65-be7b-deded36340cd}</UniqueIdentifier>
+      <UniqueIdentifier>{d6dcb6e2-0473-4ddc-b797-2edd70d76e3d}</UniqueIdentifier>
     </Filter>
     <Filter Include="Bundle\Header Files">
-      <UniqueIdentifier>{ae3fb5fd-8b97-490d-9b03-87c3e3909458}</UniqueIdentifier>
+      <UniqueIdentifier>{4f2efe71-1ef0-437e-a8dc-e067ccda0f23}</UniqueIdentifier>
     </Filter>
     <Filter Include="Bundle\Source Files">
-      <UniqueIdentifier>{93b199b4-6c04-4ec1-8d9f-056a19b603a3}</UniqueIdentifier>
+      <UniqueIdentifier>{71d2c179-3333-4125-b6a2-20776e1de3a0}</UniqueIdentifier>
     </Filter>
     <Filter Include="Service">
-      <UniqueIdentifier>{cd2e011e-b537-47fb-838c-3324c7325aac}</UniqueIdentifier>
+      <UniqueIdentifier>{a46b463d-42f5-4d95-9605-5df191413ab0}</UniqueIdentifier>
     </Filter>
     <Filter Include="Service\Header Files">
-      <UniqueIdentifier>{0d6a9b65-4d0e-481a-8013-ce7248dbe4df}</UniqueIdentifier>
+      <UniqueIdentifier>{1eba3c2b-b6f0-42da-aca7-c43e2a981b47}</UniqueIdentifier>
     </Filter>
     <Filter Include="Service\Source Files">
-      <UniqueIdentifier>{b648c0f9-65fb-4ddf-a9ba-0e7fb2bd36eb}</UniqueIdentifier>
+      <UniqueIdentifier>{c8568335-1f3c-477a-818a-6d11e66b4360}</UniqueIdentifier>
     </Filter>
     <Filter Include="ExtensionPointService">
-      <UniqueIdentifier>{cef95bbd-ebad-4c46-b22e-215587ce8f0b}</UniqueIdentifier>
+      <UniqueIdentifier>{e4b85b71-1561-46d5-8fbb-e64c015e60e5}</UniqueIdentifier>
     </Filter>
     <Filter Include="ExtensionPointService\Header Files">
-      <UniqueIdentifier>{94616acd-ff64-4a16-8644-fd72e28ab389}</UniqueIdentifier>
+      <UniqueIdentifier>{48447e0c-8762-429f-a430-5a4792d28f96}</UniqueIdentifier>
     </Filter>
     <Filter Include="ExtensionPointService\Source Files">
-      <UniqueIdentifier>{03963b4b-093d-4851-a863-d4ab3e343b44}</UniqueIdentifier>
+      <UniqueIdentifier>{08fda0da-34b9-43bf-9d78-bd1be6f5b873}</UniqueIdentifier>
     </Filter>
     <Filter Include="PreferencesService">
-      <UniqueIdentifier>{5ba3c102-8e57-490b-9ad0-9b64d9d4d0d8}</UniqueIdentifier>
+      <UniqueIdentifier>{c5b1f06f-c93b-406b-bcd3-5ead1b8b6125}</UniqueIdentifier>
     </Filter>
     <Filter Include="PreferencesService\Header Files">
-      <UniqueIdentifier>{1f9c7c9b-f154-499a-ba72-9867c4b3458d}</UniqueIdentifier>
+      <UniqueIdentifier>{96765e50-6ef8-4c68-8282-1a3c3152d393}</UniqueIdentifier>
     </Filter>
     <Filter Include="PreferencesService\Source Files">
-      <UniqueIdentifier>{eb052868-703d-45b7-b03b-e01c99b05120}</UniqueIdentifier>
+      <UniqueIdentifier>{cb21747a-37f8-4499-8873-3cabd08a717c}</UniqueIdentifier>
     </Filter>
     <Filter Include="BundleInstallerService">
-      <UniqueIdentifier>{ddd3de63-2137-4ccd-b5c4-070e45703213}</UniqueIdentifier>
+      <UniqueIdentifier>{3da3103e-ae66-41e9-b360-2740aa273576}</UniqueIdentifier>
     </Filter>
     <Filter Include="BundleInstallerService\Header Files">
-      <UniqueIdentifier>{2971893e-aa11-491a-8955-a1035367b791}</UniqueIdentifier>
+      <UniqueIdentifier>{2ee40ddc-3d4c-4f3b-981c-6a326194b5ef}</UniqueIdentifier>
     </Filter>
     <Filter Include="BundleInstallerService\Source Files">
-      <UniqueIdentifier>{db6a81d2-2364-440d-bcdc-24a9269c5396}</UniqueIdentifier>
+      <UniqueIdentifier>{b203939e-d977-4046-ac53-3729da5572d5}</UniqueIdentifier>
     </Filter>
     <Filter Include="AuthService">
-      <UniqueIdentifier>{8ec488fb-e6aa-4c28-89ac-efdfd27828be}</UniqueIdentifier>
+      <UniqueIdentifier>{0a3d8cb6-e018-4cf8-91ef-77fe3781a726}</UniqueIdentifier>
     </Filter>
     <Filter Include="AuthService\Header Files">
-      <UniqueIdentifier>{c7bd8089-f6eb-4052-972e-11e4349a267a}</UniqueIdentifier>
+      <UniqueIdentifier>{a89f8f1e-f2e8-4311-8a84-05f85a46a6e0}</UniqueIdentifier>
     </Filter>
     <Filter Include="AuthService\Source Files">
-      <UniqueIdentifier>{1b36568e-53c8-4b7c-adc5-dcf39cb5e383}</UniqueIdentifier>
+      <UniqueIdentifier>{b69dc660-b9cb-4b11-90f5-1bb7441ba96d}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -139,6 +139,9 @@
       <Filter>Bundle\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\Poco\OSP\BundleFile.h">
+      <Filter>Bundle\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Poco\OSP\BundleFilter.h">
       <Filter>Bundle\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\Poco\OSP\BundleLoader.h">
@@ -261,6 +264,9 @@
       <Filter>Bundle\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\BundleFile.cpp">
+      <Filter>Bundle\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\BundleFilter.cpp">
       <Filter>Bundle\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\BundleLoader.cpp">
