--- a/platform/OSP/OSP_x64_vs90.vcproj
+++ b/platform/OSP/OSP_x64_vs90.vcproj
@@ -250,6 +250,8 @@
 				<File
 					RelativePath=".\include\Poco\OSP\BundleFile.h"/>
 				<File
+					RelativePath=".\include\Poco\OSP\BundleFilter.h"/>
+				<File
 					RelativePath=".\include\Poco\OSP\BundleLoader.h"/>
 				<File
 					RelativePath=".\include\Poco\OSP\BundleManifest.h"/>
@@ -280,6 +282,8 @@
 					RelativePath=".\src\BundleFactory.cpp"/>
 				<File
 					RelativePath=".\src\BundleFile.cpp"/>
+				<File
+					RelativePath=".\src\BundleFilter.cpp"/>
 				<File
 					RelativePath=".\src\BundleLoader.cpp"/>
 				<File
